# string-to-number

./: CMakeLists.txt  LICENSE  README.md  str-to-num.hpp  test_build.bat  test_build.sh
.github/workflows/: test-linux.yml  test-windows.yml
test/: test.cpp
